解决 amap 冲突问题

--- a/lib/android/build.gradle
+++ b/lib/android/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.amap.api:3dmap:6.6.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.facebook.react:react-native:+'
+    compileOnly 'com.amap.api:3dmap:6.6.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
