--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ dependencies {
     implementation project(':react-native-amap3d')
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.amap.api:3dmap:6.6.0'
 }
 
 // Run this once to be able to run the application with BUCK
