--- a/lib/android/build.gradle
+++ b/lib/android/build.gradle
@@ -5,10 +5,12 @@ buildscript {
     ext.kotlin_version = '1.3.10'
 
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
