--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,8 +94,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.rnamap3d"
@@ -154,10 +154,10 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-amap3d')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-amap3d')
+    implementation 'com.amap.api:3dmap:6.5.0'
 }
 
 // Run this once to be able to run the application with BUCK
