--- a/lib/android/build.gradle
+++ b/lib/android/build.gradle
@@ -5,27 +5,27 @@ buildscript {
     ext.kotlin_version = '1.2.41'
 
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
     }
 }
 
 dependencies {
-    provided 'com.facebook.react:react-native:+'
-    provided 'com.amap.api:3dmap:6.4.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compileOnly 'com.facebook.react:react-native:+'
+    compileOnly 'com.amap.api:3dmap:6.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
