--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "run-ios": "node node_modules/react-native/local-cli/cli.js run-ios"
   },
   "devDependencies": {
-    "metro-react-native-babel-preset": "0.51.1",
-    "react": "16.6.3",
-    "react-native": "0.58.4",
+    "metro-react-native-babel-preset": "^0.53.1",
+    "react": "16.8.3",
+    "react-native": "0.59.2",
     "react-navigation": "^2.18.0"
   },
   "rnpm": {
